Archive2/71/3305adce664a36/output
main.cpp:8:46: error: reference to overloaded function could not be resolved; did you mean to call it?
    std::cout << std::boolalpha << a == b << std::endl;
                                             ^~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:564:5: note: possible target for call
    endl(basic_ostream<_CharT, _Traits>& __os)
    ^
1 error generated.
